--- a/pghaproxy/templates/default/pghaproxy.cfg.erb
+++ b/pghaproxy/templates/default/pghaproxy.cfg.erb
@@ -84,7 +84,7 @@ backend php_site_app_servers
   <% node[:haproxy][:pgbackends][:site].each do |backend| -%>
   server <%= backend['name'] %> <%= backend['ip'] %>:80 weight <%= backend['backends'] || 10 %> maxconn <%= backend['backends'] * node[:haproxy][:maxcon_factor_php_app] %> check inter <%= node[:haproxy][:check_interval] %>
   <% end -%>  
-<% else -%>
+<% end -%>
 
 <% if !node[:haproxy][:nodejs_backends].empty? -%>
 backend nodejs_app_servers
