--- a/pghaproxy/templates/default/pghaproxy.cfg.erb
+++ b/pghaproxy/templates/default/pghaproxy.cfg.erb
@@ -141,7 +141,7 @@ frontend http-in
   acl php_site_app hdr_sub(Referer) /_/
   <% end -%>
   #<% if !node[:haproxy][:pgbackends][:cyh].empty? -%>
-  #acl php_cyg_app path_beg /
+  #acl php_cyh_app path_beg /
   #<% end -%>
 
   # all domains of Rails applications
@@ -215,8 +215,8 @@ frontend http-in
   use_backend php_site_app_servers if php_site_app
   <% end -%>
   <% if !node[:haproxy][:pgbackends][:cyh].empty? -%>
-  #use_backend php_cyg_app_servers if php_cyg_app
-  default_backend php_cyg_app_servers
+  #use_backend php_cyh_app_servers if php_cyh_app
+  default_backend php_cyh_app_servers
   <% end -%>
 
   #USING CUSTOM RECIPE
